--- a/src/app/filter-list/filter-list.component.html
+++ b/src/app/filter-list/filter-list.component.html
@@ -9,9 +9,9 @@
         <table>
             <thead>
                 <tr>
-                    <th >Title</th>
-                    <th >Language</th>
-                    <th >Status</th>
+                    <td>Titre</td>
+                    <td>Langue</td>
+                    <td>Status</td>
                 </tr>
             </thead>
             <tbody>
