--- a/src/app/filter-list/filter-list.component.css
+++ b/src/app/filter-list/filter-list.component.css
@@ -1,3 +1,8 @@
+p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #928F8F;
+    font-size: small;
+}
 .main {
     border: 1px solid black;
     margin-left: 3em !important;
