--- a/src/app/filter-list/filter-list.component.html
+++ b/src/app/filter-list/filter-list.component.html
@@ -26,4 +26,5 @@
         </table>
         <div *ngIf="movies$"><p>nombre total de films : {{ movies$.length }}</p></div>
     </div>
+    <app-details [data]="children_data"></app-details>
 </div>
