--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -7,19 +7,19 @@
             <div class="form-group row">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Titre</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data}}>
+                  <input type="text" class="form-control"  placeholder={{data.title}}>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Genre</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data}}>
+                  <input type="text" class="form-control"  placeholder={{data.episodes}}>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data}}>
+                  <input type="text" class="form-control"  placeholder={{data.creation}}>
                 </div>
             </div>
         </div>
