--- a/src/app/filter-list/filter-list.component.html
+++ b/src/app/filter-list/filter-list.component.html
@@ -18,10 +18,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let show of movies$ | filter:filterTerm" (click)="selected($event)">
+                <tr *ngFor="let show of movies$ | filter:filterTerm; index as i" id={{i}} (click)="selected($event)" [ngClass]="{select: select === show.id}">
                     <td>{{show.title}}</td>
                     <td>{{show.language}}</td>
-                    <td>{{show.episodes}}</td>
                     <td>{{show.status}}</td>
                 </tr>
             </tbody>
