--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -2,32 +2,15 @@
     <ul ngbNav #nav="ngbNav" class="nav-tabs">
     <li ngbNavItem>
       <a ngbNavLink>Etat Pédago</a>
-      <ng-template ngbNavContent>
-        <div class="first_block">
-            <div class="form-group row">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Titre</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data.title}}>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Genre</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data.episodes}}>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control"  placeholder={{data.creation}}>
-                </div>
-            </div>
-        </div>
-    </ng-template>
+        <ng-template ngbNavContent>
+            <app-summary-info [data]="data"></app-summary-info>
+        </ng-template>
     </li>
     <li ngbNavItem>
       <a ngbNavLink>Historique</a>
-      <ng-template ngbNavContent><div><input class="form-control" type="text" placeholder={{data}} readonly></div></ng-template>
+      <ng-template ngbNavContent>
+          <app-episode-info [data]="data"></app-episode-info>
+      </ng-template>
     </li>
   </ul>
   <div [ngbNavOutlet]="nav"></div>
