--- a/src/app/information/episode-info/episode-info.component.html
+++ b/src/app/information/episode-info/episode-info.component.html
@@ -1,26 +1,28 @@
-<div class="main block">
-    <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Titre</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control"  placeholder={{data.title}}>
+<div class="main block" *ngIf="episode_data$?.length" >
+    <div class="block" *ngFor="let episode of episode_data$" >
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Title</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control"  placeholder={{episode.title}}>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Episodes</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control"  placeholder={{data.episodes}}>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Director</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control"  placeholder={{episode.director}}>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Strating</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control"  placeholder={{data.creation}}>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Airing</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control"  placeholder={{episode.date}}>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Network</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control"  placeholder={{data.network}}>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">code</label>
+            <div class="col-sm-10">
+            <input type="text" class="form-control"  placeholder={{episode.code}}>
+            </div>
         </div>
     </div>
 </div>
