--- a/src/app/information/episode-info/episode-info.component.html
+++ b/src/app/information/episode-info/episode-info.component.html
@@ -1,4 +1,9 @@
-<div class="main block" *ngIf="episode_data$?.length" >
+<ng-template #noCourses>
+    <div class="main block">
+        <h3>please select a show</h3>
+    </div>
+</ng-template>
+<div class="main block" *ngIf="episode_data$?.length; else noCourses">
     <div class="block" *ngFor="let episode of episode_data$" >
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">Title</label>
@@ -14,10 +19,10 @@
         </div>
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">Airing</label>
-            <div class="col-sm-10">
-            <input type="text" class="form-control"  placeholder={{episode.date}}>
+                <div class="col-sm-10">
+                <input type="text" class="form-control"  placeholder={{episode.date}}>
+                </div>
             </div>
-        </div>
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">code</label>
             <div class="col-sm-10">
