--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -6,7 +6,7 @@
       </div>
   
       <div class="form-row">
-        <button type="submit" [disabled]="!form.valid">Créer Etudiant</button>
+        <button class="btn btn-danger" type="submit" [disabled]="!form.valid">Créer Etudiant</button>
       </div>
     </form>
   
