--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -12,5 +12,8 @@
               </select>
             </div>
         </div>
+        <button class="btn btn-danger">
+            <a routerLink="/create" routerLinkActive="active">Créer un Film</a>
+        </button>
     </div>
 </div>
