--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,8 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<style>
-
-</style>
-
 <div class="toolbar" role="banner">
   <nav>
     <ul class="navi">
-      <img
-      width="130"
-      alt="Epitech"
-      src="assets/epitech.png"
-      />
+      <li><img width="130" alt="Epitech"src="assets/epitech.png" /></li>
+      <li>Welcome Users</li>
     </ul>
   </nav>
 </div>
