--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <div class="toolbar" role="banner">
   <nav>
     <ul class="navi">
-      <li><img width="130" alt="Epitech"src="assets/epitech.png" /></li>
+      <li>
+        <a routerLink ="/">
+          <img width="130" alt="Epitech"src="assets/epitech.png" />
+        </a>
+      </li>
       <li>Welcome Users</li>
+      <li></li>
     </ul>
   </nav>
 </div>
