seting up generic material stepper

--- a/src/app/generic-form/layout-form/layout-form.component.css
+++ b/src/app/generic-form/layout-form/layout-form.component.css
@@ -1,3 +1,11 @@
 .main {
     padding: 4em;
 }
+
+.mat-stepper-horizontal {
+    margin-top: 8px;
+  }
+  
+  .mat-form-field {
+    margin-top: 16px;
+  }
