--- a/src/app/generic-form/dynamic-form/dynamic-form.component.html
+++ b/src/app/generic-form/dynamic-form/dynamic-form.component.html
@@ -1,11 +1,7 @@
 <div [formGroup]="form">
-    <label [attr.for]="question.key">{{question.label}}</label>
-  
     <div [ngSwitch]="question.controlType">
-  
-      <input  class="form-control" *ngSwitchCase="'textbox'" [formControlName]="question.key"
-              [id]="question.key" [type]="question.type">
+      <label [attr.for]="question.key">{{question.label}}</label>
+      <input  class="form-control" *ngSwitchCase="'textbox'" [formControlName]="question.key" [id]="question.key" required [type]="question.type">
+      <label>{{ form.get('Firstname').value }}</label>
     </div>
-  
-    <div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>
-  </div>
+</div>
