--- a/src/app/generic-form/layout-form/layout-form.component.html
+++ b/src/app/generic-form/layout-form/layout-form.component.html
@@ -1,35 +1,34 @@
-<div class="main">
-    <h3>Formulaire d'inscription</h3>
-    <mat-horizontal-stepper>
-
-        <!--color
-date
-datetime-local
-email
-month
-number
-password
-search
-tel
-text
-time
-url
-week -->
-
-        <mat-step label="Step 1">
-            <app-form [questions]="questions$ | async"></app-form>
-            <mat-form-field appearance="fill">
-                <mat-label>Amount</mat-label>
-                <input matInput type="date" class="example-right-align">
-              </mat-form-field>
-        </mat-step>
-      
-        <mat-step label="Step 2">
-            <app-form [questions]="questions$ | async"></app-form>
-        </mat-step>
-      
-        <mat-step label="Step 3">
-          You are now done.
-        </mat-step>
-      </mat-horizontal-stepper>
-</div>
+<section>
+  <mat-horizontal-stepper>
+  <div *ngFor="let control of dynamicFormArray">
+    <mat-step [stepControl]="lambdaFormGroup" label="Fill out your address">
+      <div class="col-md-12">{{ myFormGroup.value | json }}</div>
+      <div><p>{{errorMessage$}}</p></div>
+        <form [formGroup]="myFormGroup">
+          <div *ngFor="let field of control">
+            <div [ngSwitch]="field.Type">
+              <div *ngSwitchCase="'input'">
+                <label>{{ field.Label }}</label>
+                <input type="text" [formControlName]="field.ID" class="form-control">
+              </div>
+              <div *ngSwitchCase="'select'">
+              <label>{{ field.Label }}</label>
+              <select class="form-control">
+                <option value="-1">Select</option>
+                <option *ngFor="let val of field.Value.split(',')"> {{ val }}</option>
+              </select>
+              </div>
+            </div>
+          </div>
+        </form>
+      <div>
+        <br>
+        <button class="btn btn-primary" mat-button matStepperNext>Next</button>
+      </div>
+    </mat-step>
+  </div>
+</mat-horizontal-stepper>
+<form [formGroup]="myFormGroup" (ngSubmit)="onSubmit()">
+  <button class="btn btn-primary" type="submit" [disabled]="myFormGroup.invalid">Submit</button>
+</form>
+</section>
